# pyinterprod

./: .gitignore  LICENSE  README.md  config.ini  config.json  config_member.json  members.ini  pyproject.toml  requirements.txt  setup.py
config/: analyses.conf  main.conf  members.conf
pyinterprod/: __init__.py  cli.py  iprscan.py  orautils.py  pdbe.py  uniparc.py
pyinterprod/clan/: __init__.py  cdd.py  panther.py  pfam.py  pirsf.py  utils.py
pyinterprod/interpro/: __init__.py  clan.py  database.py  hmm.py  iprscan.py  legacy.py  match.py  method.py  protein.py  report.py  signature.py  taxonomy.py
pyinterprod/interproscan/: __init__.py  analyses.py  database.py  jobs.py  manager.py  persistence.py  uniparc.py  utils.py
pyinterprod/memberdbupdate/: __init__.py  data_exchange.py  delete.py  delete_dead_signatures.py  exchange.py  filter_overlapping_methods.py  generate_old_new_stats.py  generate_stats.py  match_tmp.py  methods.py  refresh.py  report.py  submit_countsupdate.py
pyinterprod/pronto/: __init__.py  database.py  goa.py  match.py  prediction.py  protein.py  proteome.py  schema.sql  signature.py  taxon.py  uniprot.py  utils.py
pyinterprod/proteinupdate/: __init__.py  export.py  goa.py  interpro.py  interprodb.py  interproscan.py  io.py  matches.py  materializedviews.py  misc.py  proteins.py  sendmail.py  signatures.py  sprotmodule.c  taxonomy.py  uniparc.py  uniprot.py  uniprotdb.py  xref.py
pyinterprod/uniprot/: __init__.py  aa.py  exchange.py  flatfile.py  sib.py  sprotmodule.c  uniparc.py  uniprot.py  unirule.py  xrefs.py
(+31 files in other folders)
